# Community_Website

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cs_com_db.db  localize-1 (create po files).bat  localize-1.bat  localize-2 (create mo files).bat  localize1.bat  localize2.bat  pyproject.toml  start.bat  start_create_db.bat  start_db_op.bat  translations.json  translations.txt
batch_files/: localize-1 (create po files).bat  localize-2 (create mo files).bat  start.bat  start_admin_panel.bat
community_website/: Hoşgeldiniz.py  Welcome.py  db create.py  main.py  👋Hoşgeldiniz.py  💻 Hoşgeldiniz.py  💻Hoşgeldiniz.py
community_website/admin/: db op.py
community_website/modules/: Plan.xlsx  configurations.py  db op.py  excelTranslator.py  utils.py
community_website/pages/: 1_👥 Topluluk Ekibimiz.py  1_🧑🏻‍🤝‍🧑🏻 Topluluk Ekibimiz.py  1_🧑🏻‍🤝‍🧑🏻Topluluk Ekibimiz.py  2_📅 Etkinlik Takvimimiz.py  2_📅Etkinlik Takvimimiz.py  3_🚀 Aylık Planlarımız.py  3_🚀 Proje Planlarımız.py  3_🚀Aylık Planlarımız.py  4_🌟 Açık Programlar.py  4_🌟 Gençlik Programları.py  4_📧 Geri Bildirim Formu.py  4_📧Geri Bildirim Formu.py  5_🍲 Haftalık Menü.py  5_🍽️ Haftalık Menü.py  5_📧 Geri Bildirim Formu.py  6_📝 Geri Bildirim Formu.py  6_📧 Geri Bildirim Formu.py  Calendar.py  Feedback.py  Menu.py  Plans.py  Programs.py  Team.py
i18n/: translations.txt
i18n/py3.9/: msgfmt.py  pygettext.py
input/: Aylık Plan.xlsx  Etkinlik Takvimi.xlsx  Programlar.xlsx  Topluluk Ekibi.xlsx
locales/: base.pot
script/: start_admin_panel.bat
static/xlsx/: .~lock.Etkinlik Takvimi.xlsx#  Aylık Plan.xlsx  Etkinlik Takvimi.xlsx  Program.xlsx  Programlar.xlsx  Takvim.xlsx  Topluluk Ekibi.xlsx
tests/: run_tests.bat  test_utils.py
tests/test_excels/: empty_file.xlsx  (+2 more)
(+20 files in other folders)
